force-app/main/default/objects/Event_Group__c/Event_Group__c.object-meta.xml
<CustomObject>
    <label>Event Group</label>
    <nameField>
        <label>Event Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>