force-app/main/default/objects/Event_Group__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used to determine whether this Event Group is Active or not</description>
    <inlineHelpText>Check this field is this Event Group needs to be active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>