force-app/main/default/objects/Event_Group__c/fields/Event_Group_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Group_URL__c</fullName>
    <inlineHelpText>Event Group URL with Search filter.</inlineHelpText>
    <label>Event Group URL</label>
    <type>Url</type>
</CustomField>