force-app/main/default/objects/Event_Group__c/fields/Number_of_Active_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Events__c</fullName>
    <inlineHelpText>This field value will be generated by system</inlineHelpText>
    <label>Number of Active Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>