force-app/main/default/objects/Event_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Number_of_Active_Events__c</columns>
    <columns>Event_Group_URL__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Event Groups</label>
</ListView>